--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="searchContainer col-md-3">
       <h5>Search for a City: </h5>
       <div class="searchBox">
-        <input type="text" placeholder="Enter a city">
-        <button class="btn btn-primary" type="button">
+        <input type="text" placeholder="Enter a city" id="searchParam">
+        <button class="btn btn-primary" type="button" id="searchButton">
           <i class="fas fa-search"></i>
         </button>
       </div>
