refactoring JS file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <i class="fas fa-search"></i>
         </button>
       </div>
-      <div class="searchResults"></div>
+      <ul id="searchResults"></ul>
     </div>
     <div class="apiResults col-md-9">
       <h5>Current Weather</h5>
