--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
         <button class="btn btn-primary" type="button" id="searchButton">
           <i class="fas fa-search"></i>
         </button>
+        <button class="btn btn-primary" type="button" id="clearSearch">Clear</button>
       </div>
       <ul id="searchResults"></ul>
     </div>
     <div class="apiResults col-md-9">
-      <h5>Current Weather</h5>
+      <h3>Current Weather</h3>
       <div class="currentConditions">
         <h6>Please begin by searching for a city on the left.</h6>
       </div>
-      <h5>5-Day Forecast</h5>
+      <h3>5-Day Forecast: </h3>
       <div class="fiveDay row "></div>
     </div>
   </div>
